<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">哈哈互娱</string>
    <string name="action_settings">Settings</string>
    <string name="intent_error">网络错误，请检查您的网络连接！</string>
    <string name="ceshi_1">测试   1</string>
    <string name="ceshi_2">测试   2</string>
    <string name="activity_title">活动标题：</string>
    <string name="setting_ticket">设置票种：</string>
    <string name="free_ticket">免费票：</string>
    <string name="sale_ticket">收费票：</string>
    <string name="sale_price">售价：</string>
    <string name="lingyuan">0元</string>
    <string name="activity_topic">活动主题:</string>
    <string name="number_people">活动人数:</string>
    <string name="activity_form">活动形式:</string>
    <string name="select_address">选择地点：</string>
    <string name="detaile_address_input">如朝阳区华贸1号写字楼：</string>
    <string name="activity_time">选择时间：</string>
    <string name="activity_time_start">开始时间:</string>
    <string name="activity_time_end">结束时间:</string>
    <string name="upload_photo">上传海报:(300x300px)</string>
    <string name="button_submit">提交</string>
    <string name="exittext_xiangqing">具体详情</string>
    <string name="OK">确定</string>
    <string name="publish">发布</string>
    <string name="publish_action_cancel">取消</string>
    <string name="huodong_fabu">活动发布</string>
    <string name="shouye">首页</string>
    <string name="message">资讯</string>
    <string name="wealth_list_main">金榜</string>
    <string name="join_hd">参加</string>
    <string name="guanzhu">关注</string>
    <string name="dongtai">动态</string>
    <string name="personal_center">个人中心</string>
    <string name="address_user">定位中</string>
    <string name="acticity_center">活动标题或者活动类型</string>
    <string name="searchview_hint">活动</string>
    <string name="huodong">活动</string>
    <string name="jingqingqidai">敬请期待</string>
    <string name="zhuanti">专题</string>
    <string name="shangcheng">商城</string>
    <string name="zhaopin">招聘</string>
    <string name="recommend">热门推荐</string>
    <string name="shalong">沙龙</string>
    <string name="xuanmei_word">选美</string>
    <string name="yule">娱乐</string>
    <string name="tiyu">马拉松</string>
    <string name="more">更多</string>
    <string name="news_huodong">资讯</string>
    <string name="xuanmei">第几届选美比赛选美</string>
    <string name="baoming_end_time">报名截止:</string>
    <string name="start_time_activity">2016-03-15 08:00</string>
    <string name="baoming_end_time_activity">2016-04-15 08:00</string>
    <string name="baoming_time">报名时间:</string>
    <string name="game_playing"></string>
    <string name="area_activity">北京市朝阳区</string>
    <string name="jianjie_activity">通过本次活动选出第一美少女</string>
    <string name="label_huodong">选美/r选美</string>
    <string name="time_fabu">3天前</string>
    <string name="huodong_detail">活动详情</string>
    <string name="collect">收藏</string>
    <string name="buy_ticket">入场券</string>
    <string name="baoming_immediately">立即报名</string>
    <string name="weiguan_baoming">围观报名</string>
    <string name="is_over">已结束</string>
    <string name="liulan_account">浏览902次</string>
    <string name="collect_count">收藏200次</string>
    <string name="price_ticket">8-1000</string>
    <string name="join_number_people">已经报名 34 人 / 限 56 人报名</string>
    <string name="time_activity_detail">03-22 13:30</string>
    <string name="address_activity_detail">北京市朝阳区西大望路</string>
    <string name="watch_number">关注</string>
    <string name="watch_number_zhubanfan">2000</string>
    <string name="yifabu">已发布</string>
    <string name="fabu_count">4</string>
    <string name="watch">关注</string>
    <string name="organizer">主办方</string>
    <string name="zhubanfang">某某集团主办</string>
    <string name="more_detail_msg">更多详情</string>
    <string name="topic_huodong">话题</string>
    <string name="hongbao_wall">红包墙</string>
    <string name="programme_huodong">节目单</string>
    <string name="game_process">比赛进程</string>
    <string name="report_process">赛事报道</string>
    <string name="programme_time">2016.6.30 12:00-4:00</string>
    <string name="programme_title">小郝同学表演相声</string>
    <string name="programme_name">表演人：肖文斌等</string>
    <string name="dashang_programme">打赏</string>
    <string name="game_detail">比赛详情</string>
    <string name="player_paihang">选手排行</string>
    <string name="player_sign_up">报名选手</string>
    <string name="zuopinpaihang">作品排行</string>
    <string name="zuopin_get_ticket">1000票</string>
    <string name="bianhao_work">编号</string>
    <string name="player_sort">1</string>
    <string name="bianhao">33304</string>
    <string name="zuozhe">作者</string>
    <string name="name_work">tom</string>
    <string name="vote">投票</string>
    <string name="guessing">竞猜</string>
    <string name="name">navgt</string>
    <string name="weidenglu">未登录</string>
    <string name="user_name">姓名:</string>
    <string name="account_manage">用户信息</string>
    <string name="myjoin_activity">我参加的活动</string>
    <string name="money_manage_center">资金管理</string>
    <string name="piaoquan">票券</string>
    <string name="my_order">我的订单</string>
    <string name="collect_activity">我的收藏</string>
    <string name="host_activity">我是主办方</string>
    <string name="user_collect">收藏</string>
    <string name="album">相册</string>
    <string name="log">日志</string>
    <string name="beibao">背包</string>
    <string name="order">订单</string>
    <string name="tongxunlu">通讯录</string>
    <string name="role">角色</string>
    <string name="shipin">视频</string>
    <string name="zhuban">主办</string>
    <string name="join">参与</string>
    <string name="user_message">消息</string>
    <string name="myjoin_game">我参加的比赛</string>
    <string name="zanzhu_huodong">我赞助的活动</string>
    <string name="user_friends">我的通讯录</string>
    <string name="mylog">我的日志</string>
    <string name="myfriend">我的好友</string>
    <string name="zhanghuyue">账户余额:</string>
    <string name="zhanghuyue_suoding">锁定中金额:</string>
    <string name="zhanghuyue_number">100元</string>
    <string name="z_pay">z币:</string>
    <string name="z_pay_number">0Zb</string>
    <string name="weizhi">未知</string>
    <string name="weimm">未命名</string>
    <string name="user_gq">世界这么大，我没什么想说的</string>
    <string name="no_network">当前无网络</string>
    <string name="hint_search">活动或者赛事</string>
    <string name="remensousuo">热门搜索</string>
    <string name="zuijinsosuo">最近搜索</string>
    <string name="no_records">暂无搜索记录</string>
    <string name="search">搜索</string>
    <string name="baoming">报名</string>
    <string name="xuanshoubaoming">选手报名</string>
    <string name="nickname_player">昵称</string>
    <string name="input_nickname">请输入您的昵称</string>
    <string name="name_player">姓名</string>
    <string name="input_name">请输入您的姓名</string>
    <string name="select_sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secrecy_user">保密</string>
    <string name="data_born">出生日期</string>
    <string name="input_data_born">请输入出生日期</string>
    <string name="work">职业</string>
    <string name="input_work">请输入你的职业</string>
    <string name="high_player">身高</string>
    <string name="input_high_player">请输入你的身高</string>
    <string name="weight_player">体重</string>
    <string name="input_weight_player">请输入你的体重</string>
    <string name="sanwei">三围</string>
    <string name="input_sanwei_player">请输入你的三围</string>
    <string name="contact_user">联系信息</string>
    <string name="input_contact_player">请输入你的联系方式</string>
    <string name="zuihaochengji">最好成绩</string>
    <string name="input_chengji_player">请输入你的最好成绩</string>
    <string name="email_player">邮箱</string>
    <string name="input_email_player">请输入你的邮箱</string>
    <string name="address_player">住址</string>
    <string name="input_address_player">请输入你的住址</string>
    <string name="hobby_player">兴趣</string>
    <string name="input_hobby_player">请输入你的兴趣</string>
    <string name="introduce_player">自我介绍</string>
    <string name="input_introduce_player">请输入你的介绍</string>
    <string name="confirm_submit">确认提交</string>
    <string name="my_set_choose_operate" translatable="false">请选择操作</string>
    <string name="my_set_album" translatable="false">相册</string>
    <string name="my_set_photo" translatable="false">头像设置</string>
    <string name="my_photo" translatable="false">拍照</string>
    <string name="myticket">我的票券</string>
    <string name="myticket_late">过期票券</string>
    <string name="ticket_free">￥</string>
    <string name="introduce_ticket">票的介绍</string>
    <string name="meitifang">媒体方</string>
    <string name="sold_out">已售罄</string>
    <string name="address_haidian">海淀</string>
    <string name="time_activity_mb">02/23</string>
    <string name="free_activity">免费</string>
    <string name="charge_activity">收费</string>
    <string name="page_error_lianjie">需要检查网络在此加载</string>
    <string name="huodong_all">全活动</string>
    <string name="leixixng">全类型</string>
    <string name="shiduan">全时段</string>
    <string name="jiawei">全价位</string>
    <string name="current_city">当前城市</string>
    <string name="peking">北京</string>
    <string name="adderss_map">北京市朝阳区大望路</string>
    <string name="mycollect">我的收藏</string>
    <string name="nohuodong">当前没有收藏的活动</string>
    <string name="search_activity">寻找活动</string>
    <string name="myjoin_huodong">我参加的活动</string>
    <string name="title_login">登录</string>
    <string name="username_no_point">请输入用户名/手机号</string>
    <string name="login_pwd">密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_psw">请输入密码</string>
    <string name="input_psw_confirm">请再次输入密码</string>
    <string name="service_agree">我已阅读并同意《注册协议》</string>
    <string name="please_input_phone">电话号码不能为空</string>
    <string name="please_right_phone">请输入合格的电话号码</string>
    <string name="please_input_psw">请输入密码</string>
    <string name="please_read_agreement">请同意注册协议</string>
    <string name="please_input_authcode">请输入验证码</string>
    <string name="change_image">换一张</string>
    <string name="old_login_pwd">旧密码</string>
    <string name="new_login_pwd">新密码</string>
    <string name="confirm_new_login_pwd">确认新密码</string>
    <string name="write_old_login_pwd">请输入旧登录密码</string>
    <string name="write_new_login_pwd">请输入新登录密码</string>
    <string name="repeat_new_login_pwd">请重复新登录密码</string>
    <string name="repeat_write">再输入</string>
    <string name="pwd_format">密码需要6~20位,建议使用字母和数字或符合的组合</string>
    <string name="commit">提交</string>
    <string name="write_phone_number">请输入手机号</string>
    <string name="write_auth_code">请输入验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="change_next">换一张</string>
    <string name="get_code_again_left">重新获取(</string>
    <string name="get_code_again_right">s)</string>
    <string name="confirm_change">确定修改</string>
    <string name="write_new_pwd">请输入新密码</string>
    <string name="back_pwd">忘记密码</string>
    <string name="please_get_auth_code">请先获取验证码</string>
    <string name="new_pwd_below_standard">新密码不合格</string>
    <string name="pwd_change_success">密码重置成功</string>
    <string name="write_right_phone">请输入合格电话号码</string>
    <string name="regitster">注    册</string>
    <string name="please_write_auth_code">验证码不正确</string>
    <string name="pwd_not_match">两次密码不一致</string>
    <string name="please_write_phone_number">请输入手机号码</string>
    <string name="getimagefromalbum">从相册中选择图片</string>
    <string name="getimagefromcamera">拍照</string>
    <string name="myinfo">我的资料</string>
    <string name="myhigh">180cm</string>
    <string name="myweight">60kg</string>
    <string name="myborn">1993-6-8</string>
    <string name="myalbum">我的相册</string>
    <string name="mycontact">联系方式</string>
    <string name="myphone">联系电话:</string>
    <string name="phonenumber">19299993300</string>
    <string name="hongbao_count">红包总数:</string>
    <string name="hongbao_number">20/30</string>
    <string name="hongbao_publish">发红包</string>
</resources>