<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hongbao_count"
            android:textColor="@color/color_app_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:text="@string/hongbao_number"
            android:textColor="@color/color_app_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_publish_hongbao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layout_10dp"
            android:background="@color/color_red"
            android:gravity="end"
            android:clickable="true"
            android:text="@string/hongbao_publish"
            android:textColor="@color/color_app_text"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.stone.card.MainActivity"
        tools:ignore="MergeRootFrame" />
</LinearLayout>